force-app/main/default/objects/Huddle_Strategy_Log__c/Huddle_Strategy_Log__c.object-meta.xml
<CustomObject>
    <description>One record per internal deal-strategy meeting. Holds the raw recap, the extracted strategy and the reasoning behind it, linked to the Opportunity. Deliberately a dedicated object rather than a Note or Activity so internal strategy can never be picked up by a customer-facing tool reading Opportunity activity history.</description>
    <label>Huddle Strategy Log</label>
    <nameField>
        <displayFormat>STR-{00000}</displayFormat>
        <label>Strategy Log Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Huddle Strategy Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>