force-app/main/default/objects/Huddle_Strategy_Log__c/fields/Attendees__c.field-meta.xml
<CustomField>
    <fullName>Attendees__c</fullName>
    <label>Attendees</label>
    <type>Text</type>
    <length>255</length>
    <description>Who was in the room, as named in the recap. Used to resolve action-item owners against real users.</description>
</CustomField>