force-app/main/default/objects/Huddle_Strategy_Log__c/fields/Decision_Reasoning__c.field-meta.xml
<CustomField>
    <fullName>Decision_Reasoning__c</fullName>
    <label>Decision Reasoning</label>
    <type>LongTextArea</type>
    <length>32768</length>
    <description>Why the team decided what it decided. This is the field that matters most to someone joining the deal later; outcomes without reasoning get re-litigated.</description>
</CustomField>