force-app/main/default/objects/Huddle_Strategy_Log__c/fields/Extraction_JSON__c.field-meta.xml
<CustomField>
    <fullName>Extraction_JSON__c</fullName>
    <label>Extraction JSON</label>
    <type>LongTextArea</type>
    <length>131072</length>
    <description>The single structured parse of the recap, cached at log time so every other topic reuses one extraction instead of re-parsing the text differently.</description>
</CustomField>