force-app/main/default/objects/Huddle_Strategy_Log__c/fields/Internal_Only__c.field-meta.xml
<CustomField>
    <fullName>Internal_Only__c</fullName>
    <label>Internal Only</label>
    <type>Checkbox</type>
    <defaultValue>true</defaultValue>
    <description>Always true. Internal-only status is asserted at the data-model level, not by convention, so nothing here can be mistaken for customer-facing Opportunity activity.</description>
</CustomField>