force-app/main/default/objects/Huddle_Strategy_Log__c/fields/Logged_By__c.field-meta.xml
<CustomField>
    <fullName>Logged_By__c</fullName>
    <label>Logged By</label>
    <type>Lookup</type>
    <referenceTo>User</referenceTo>
    <relationshipName>Huddle_Strategy_Logs_Logged</relationshipName>
    <relationshipLabel>Huddle Strategy Logs Logged</relationshipLabel>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The attendee who entered the recap.</description>
</CustomField>