force-app/main/default/objects/Huddle_Strategy_Log__c/fields/Low_Confidence__c.field-meta.xml
<CustomField>
    <fullName>Low_Confidence__c</fullName>
    <label>Low Confidence</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
    <description>Set when the recap was too thin to extract confidently. Huddle degrades to asking rather than guessing.</description>
</CustomField>