force-app/main/default/objects/Huddle_Strategy_Log__c/fields/Meeting_Date__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Date__c</fullName>
    <label>Meeting Date</label>
    <type>Date</type>
    <description>When the strategy meeting happened.</description>
</CustomField>