force-app/main/default/objects/Huddle_Strategy_Log__c/fields/Meeting_Recap__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Recap__c</fullName>
    <label>Meeting Recap</label>
    <type>LongTextArea</type>
    <length>131072</length>
    <description>The raw recap exactly as the attendee entered it. Preserved verbatim so every extracted item can be traced back to the words that produced it.</description>
</CustomField>