force-app/main/default/objects/Huddle_Strategy_Log__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <label>Opportunity</label>
    <type>Lookup</type>
    <referenceTo>Opportunity</referenceTo>
    <relationshipName>Huddle_Strategy_Logs</relationshipName>
    <relationshipLabel>Huddle Strategy Logs</relationshipLabel>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The deal this strategy session was about.</description>
</CustomField>