force-app/main/default/objects/Huddle_Strategy_Log__c/fields/Source_Channel__c.field-meta.xml
<CustomField>
    <fullName>Source_Channel__c</fullName>
    <label>Source Channel</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Chat</fullName>
                <default>true</default>
                <label>Chat</label>
            </value>
            <value>
                <fullName>Dictation</fullName>
            </value>
            <value>
                <fullName>Transcript</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
    <description>How the recap reached Huddle.</description>
</CustomField>