force-app/main/default/objects/Huddle_Strategy_Log__c/fields/Strategy_Summary__c.field-meta.xml
<CustomField>
    <fullName>Strategy_Summary__c</fullName>
    <label>Strategy Summary</label>
    <type>LongTextArea</type>
    <length>32768</length>
    <description>The extracted plan: what the team decided to do about this deal.</description>
</CustomField>