force-app/main/default/objects/Huddle_Strategy_Log__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Opportunity__c</columns>
    <columns>Meeting_Date__c</columns>
    <columns>Strategy_Summary__c</columns>
    <columns>Attendees__c</columns>
    <columns>Logged_By__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All Strategy Logs</label>
</ListView>