force-app/main/default/objects/Huddle_Strategy_Log__c/listViews/By_Opportunity.listView-meta.xml
<ListView>
    <fullName>By_Opportunity</fullName>
    <columns>Opportunity__c</columns>
    <columns>NAME</columns>
    <columns>Meeting_Date__c</columns>
    <columns>Strategy_Summary__c</columns>
    <columns>Logged_By__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Opportunity__c</field>
        <operation>notEqual</operation>
        <value />
    </filters>
    <label>By Opportunity</label>
</ListView>