force-app/main/default/objects/Huddle_Strategy_Log__c/listViews/This_Week.listView-meta.xml
<ListView>
    <fullName>This_Week</fullName>
    <columns>NAME</columns>
    <columns>Opportunity__c</columns>
    <columns>Meeting_Date__c</columns>
    <columns>Attendees__c</columns>
    <columns>Logged_By__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Meeting_Date__c</field>
        <operation>equals</operation>
        <value>LAST_N_DAYS:7</value>
    </filters>
    <label>This Week</label>
</ListView>